# QSARmil

./: README.rst  claude.txt  pyproject.toml  setup.py
conda/: qsarmil.yaml  qsarmil.yml  qsarmil_linux.yml
data/CHEMBL1824/: test.csv  train.csv
data/CHEMBL1862_Ki/: test.csv  train.csv
data/CHEMBL1871_Ki/: test.csv  train.csv
data/CHEMBL2034_Ki/: test.csv  train.csv
data/CHEMBL2047_EC50/: test.csv  train.csv
data/CHEMBL204_Ki/: test.csv  train.csv
data/CHEMBL2147_Ki/: test.csv  train.csv
data/CHEMBL214_Ki/: test.csv  train.csv
data/CHEMBL218_EC50/: test.csv  train.csv
data/CHEMBL219_Ki/: test.csv  train.csv
data/CHEMBL228_Ki/: test.csv  train.csv
data/CHEMBL231_Ki/: test.csv  train.csv
data/CHEMBL233_Ki/: test.csv  train.csv
data/CHEMBL234_Ki/: test.csv  train.csv
data/CHEMBL235_EC50/: test.csv  train.csv
data/CHEMBL236_Ki/: test.csv  train.csv
notebooks/: Notebook_1_Benchmarking_QSARmil.ipynb  Notebook_2_MIL_for_conformers.ipynb  Notebook_3_KID_for_conformers.ipynb  Tutorial_1_MIL_for_conformers.ipynb  Tutorial_2_KID_for_conformers.ipynb  Tutorial_3_KID_for_fragments.ipynb  Tutorial_3_KID_for_pharmacophore.ipynb  Tutorial_4_KID_for_molecular_fragments.ipynb  Tutorial_4_MIL_for_logS.ipynb  Tutorial_5_MIL_for_ACE.ipynb
qsarmil/: lazy.py  meta.py
tutorials/: Tutorial_1_MIL_for_conformers.ipynb  Tutorial_1_MIL_review.ipynb  Tutorial_1_Pipeline.ipynb  Tutorial_2_3D_model.ipynb  Tutorial_2_KID.ipynb  Tutorial_2_KID_for_conformers.ipynb  Tutorial_3_2D_model.ipynb  Tutorial_3_PPI.ipynb  Tutorial_4_KID_for_molecular_fragments.ipynb
(+63 files in other folders)
