[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsarmil"
version = "1.0.2"
description = "Molecular multi-instance machine learning"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "MIT" }
authors = [
  { name = "Dmitry Zankov", email = "dvzankov@gmail.com" }
]

dependencies = [
        "psutil",
        "rdkit",
        "molfeat",
        "mikit-learn",
        "qsarcons",
        "py3Dmol",
        "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
